# LIDPacker

./: .gitignore  CMakeLists.txt  build.bat  readme.md  settings.cmake
include/LIDPacker/gui/: Ui_Graph.h  Ui_Inter.h  Ui_Lid.h  Ui_Redaction.h
include/LIDPacker/gui/Dialogs/: UI_dialogadd.h  UI_dialogdelete.h  UI_dialogedit.h  UI_dialoginsert.h  UI_dialogplain.h
include/LIDPacker/maker/: Graph.h  Inter.h  Lid.h  Redaction.h  predefine.h  stylesdefine.h
include/LIDPacker/maker/Brain/: Argument.h  Arguments.h  Data.h  Dimensions.h  Drawarg.h  TransValues.h
include/LIDPacker/maker/Dialogs/: dialogadd.h  dialogdelete.h  dialogedit.h  dialoginsert.h  dialogplain.h
include/LIDPacker/maker/Graph/: Chart.h  ChartView.h  callout.h
include/LIDPacker/maker/Helper/: ButtonArg.h  TableView.h  TextLineEdit.h  TreeView.h
include/science/: geometry.hpp  shortcuts.hpp  version.hpp
include/science/core/: base.hpp  constants.hpp  singleton.hpp  type.hpp
include/science/enforce/: exception.hpp
include/science/geometry/: coord.hpp  orientation.hpp  point.hpp  vector.hpp
include/science/geometry/coord/: predefine.hpp  rcoord.hpp  scoord.hpp
include/science/geometry/orientation/: euler.hpp  predefine.hpp  quaternion.hpp  rmatrix.hpp
include/science/geometry/point/: predefine.hpp  rpoint.hpp  spoint.hpp
include/science/geometry/vector/: predefine.hpp  rvector.hpp  svector.hpp
include/science/io/: tablefile.hpp
include/science/math/: approximation.hpp  interpolation.hpp  polynom.hpp  rand.hpp  struct.hpp  utility.hpp  utility.hpp.orig
include/science/math/approximation/: approximation.hpp  approximator.hpp
include/science/math/interpolation/: common.h  config.hpp  interpolator.hpp
include/science/string/: guid.hpp  utility.hpp
include/science/system/: options.hpp
libs/science/: ReLlibscience.lib  libscience.lib
source/LIDPacker/: CMakeLists.txt
source/LIDPacker/gui/: Ui_Graph.cpp  Ui_Lid.cpp  Ui_Redaction.cpp  Ui_Viewer.cpp
source/LIDPacker/maker/: Graph.cpp  Inter.cpp  Lid.cpp  Redaction.cpp  main.cpp
source/LIDPacker/maker/Brain/: Argument.cpp  Arguments.cpp  Data.cpp  Dimensions.cpp  Drawarg.cpp  TransValues.cpp
source/LIDPacker/maker/Dialogs/: dialogadd.cpp  dialogdelete.cpp  dialogedit.cpp  dialoginsert.cpp  dialogplain.cpp
source/LIDPacker/maker/Graph/: Chart.cpp  ChartView.cpp  callout.cpp
source/LIDPacker/maker/Helper/: ButtonArg.cpp  TableView.cpp  TextLineEdit.cpp  TreeView.cpp
